--- a/src/styles/work.module.css
+++ b/src/styles/work.module.css
@@ -1,5 +1,5 @@
 
-.hero-section-dots {
+.heroSectionDots {
     display: flex;
     gap: 100px;
     align-items: flex-end;
@@ -8,15 +8,15 @@
     margin-top: 100px;
 }
 
-.hero-title h1 {
+.heroTitle h1 {
     font-size: 4rem;
 }
 
-.hero-title h4 {
+.heroTitle h4 {
     font-weight: 400;
 }
 
-.dot-square {
+.dotSquare {
     width: 132px;
 }
 
@@ -27,7 +27,7 @@
     background-color: #000;
 }
 
-.work-section {
+.workSection {
     width: 100%;
     margin-top: 150px;
     margin-bottom: 150px;
@@ -36,7 +36,7 @@
     align-items: center;
 }
 
-.work-projects {
+.workProjects {
     display: flex;
     flex-direction: column;
     gap: 50px;
@@ -46,7 +46,7 @@
     max-width: 950px;
 }
 
-.work-item {
+.workItem {
     display: flex;
     gap: 50px;
     align-items: center;
@@ -57,18 +57,18 @@
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.10);
 }
 
-.project-desc {
+.projectDesc {
     max-width: 750px;
+
+    h4 {
+        margin-bottom: 20px;
+    }
+
+    p {
+        margin-bottom: 40px;
+    }
 }
 
-.project-desc h4 {
-    margin-bottom: 20px;
-}
-
-.project-desc p {
-    margin-bottom: 40px;
-}
-
-.project-hero-img {
+.projectHeroImg {
     max-width: 300px;
 }
