--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,13 @@ li {
     line-height: 1.8;
 }
 
+a {
+    display: inline-block;
+    text-decoration: none;
+    color: #4071c6;
+}
+
+
 
 .primary-button {
     max-width: fit-content;
@@ -75,16 +82,11 @@ li {
     border: 2px solid #000;
     padding: 10px 20px 10px 25px;
     border-radius: 100px;
+    color: #000;
 }
 
 .primary-button:hover {
     background-color: #c5daff;
-}
-
-a {
-    display: inline-block;
-    text-decoration: none;
-    color: #000;
 }
 
 .chev-r {
