--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,19 @@ a {
     width: 24px;
     height: 24px;
 }
+
+@media only screen and (max-width: 768px) {
+
+    html {
+        font-size: 85%;
+    }
+
+    p, a {
+        font-size: 16px;
+    }
+
+    h2 {
+        line-height: 1.2;
+    }
+
+}
