--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     gap: 100px;
+    margin-bottom: 100px;
 }
 
 .myFace {
@@ -14,10 +15,10 @@
     display: flex;
     gap: 10px;
     align-items: center;
+}
 
-    p {
-        font-size: 20px;
-    }
+.contactDetails p, .contactDetails a {
+    font-size: 20px;
 }
 
 .email {
@@ -48,4 +49,38 @@
 
 .dotLine {
     max-width: 275px;
+}
+
+@media only screen and (max-width: 768px) {
+    .aboutSection {
+        flex-direction: column;
+        gap: 50px;
+        margin-top: 0px;
+    }
+
+    .contactDetails {
+        max-width: 290px;
+        margin-top: 20px;
+        gap: 10px;
+        align-items: flex-end;
+    }
+
+    .linkedIn {
+        width: 52px;
+        height: 52px;
+        margin-bottom: -7px;
+    }
+
+    .myFace {
+        width: auto;
+        max-width: 340px;
+        margin: 0 auto;
+    }
+
+    .titleDots {
+        flex-direction: column;
+        gap: 20px;
+        align-items: flex-start;
+    }
+
 }
