--- a/src/styles/museum.module.css
+++ b/src/styles/museum.module.css
@@ -15,18 +15,13 @@ section {
 }
 
 .heroSection {
-    margin-top: 100px;
     display: flex;
     align-items: center;
     gap: 50px;
-
-    h1 {
-        margin-bottom: 30px;
-    }
 }
 
 .statue {
-    max-width: 400px;
+    max-width: 350px;
 }
 
 .mockupSection {
@@ -86,7 +81,47 @@ section {
     }
 }
 
+.prototypeSection > img {
+    border-radius: 12px;
+}
+
 .takeawaysSection {
     width: fit-content;
     margin: 100px auto;
+}
+
+@media only screen and (max-width: 768px) {
+
+    section {
+        margin-top: 75px !important;
+    }
+
+    .heroSection {
+        flex-direction: column-reverse;
+        align-items: flex-start;
+        gap: 50px;
+        margin-top: 50px !important;
+    }
+
+    .statue {
+        max-width: 300px;
+    }
+
+    .mockupPhoneContainer {
+        gap: 12px;
+    }
+
+    .mockupPhoneImg {
+        max-width: 48%;
+    }
+
+    .personaContainer {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 20px;
+    }
+
+    .mary {
+        max-width: 200px;
+    }
 }
