--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -42,7 +42,9 @@
 
 .titleDots {
     display: flex;
-    gap: 50px;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: space-between;
     align-items: center;
     margin-bottom: 25px;
 }
