--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,11 @@ main {
     max-width: 1200px;
     margin: 0 auto;
 }
+
+footer {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
