--- a/src/styles/carousel.module.css
+++ b/src/styles/carousel.module.css
@@ -49,6 +49,7 @@
     padding: 10px 10px;
     font-size: 1.2rem;
     background: #fff;
+    color: #000000;
     border: 2px solid #000000;
     border-radius: 32px;
     cursor: pointer;
@@ -71,8 +72,8 @@
 }
 
 .dot {
-  width: 10px;
-  height: 10px;
+  width: 12px;
+  height: 12px;
   border-radius: 50%;
   border: none;
   background: #ccc;
