--- a/src/styles/carousel.module.css
+++ b/src/styles/carousel.module.css
@@ -11,7 +11,7 @@
     overflow: hidden;
     width: 100%;
     margin: 0 auto; 
-    box-shadow: 0px 50px 50px -50px rgba(0, 0, 0, 0.32);
+    /* box-shadow: 0px 50px 50px -50px rgba(0, 0, 0, 0.32); */
 }
 
 .emblaContainer {
@@ -20,14 +20,13 @@
 }
 
 .emblaSlide {
-    flex: 0 0 100%; /* each slide takes full width */
-    min-width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 2rem;
     user-select: none;
     /* height: 200px; */
+    transition: min-width 0.3s, flex-basis 0.3s;
 }
 
 .emblaImage {
