--- a/src/styles/textile.module.css
+++ b/src/styles/textile.module.css
@@ -36,7 +36,7 @@ section {
     display: flex;
     flex-wrap: wrap;
     gap: 25px;
-    max-width: 600px;
+    /* max-width: 600px; */
     margin: 0 auto;
 }
 
